# SheafProbe

./: .gitignore  CONTRACT.md  README.md  pyproject.toml  requirements.txt
results/: ablations.json  holonomy.json  killer.json  real_openknot.json
scripts/: run_openknot.py
sheafprobe/: __init__.py  config.py
sheafprobe/data/: __init__.py  loaders.py  schema.py  synthetic.py
sheafprobe/experiments/: __init__.py  ablations.py  holonomy.py  killer.py  metrics.py  plots.py  run.py
sheafprobe/models/: __init__.py  baselines.py  sheaf.py
tests/: test_pipeline_smoke.py  test_sheaf_math.py  test_synthetic.py
