[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sheafprobe"
version = "0.1.0"
description = "Conformational heterogeneity of therapeutic mRNA as a sheaf-cohomology obstruction to gluing SHAPE + DMS chemical-mapping views."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriele Bambini" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "torch>=2.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "tqdm>=4.65",
    "requests>=2.31",
]

[project.optional-dependencies]
real = ["kaggle>=1.6", "ViennaRNA>=2.6"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["sheafprobe*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
